# rocket-openapi-format-swaggergen-bug

./: Cargo.toml  README.md
src/: main.rs
