[package]
name = "rocket-openapi-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_okapi = { version = "=0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = "1.0"
schemars = "0.8"
bytes = "1"
